# growthbook-rust-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
examples/client/: Cargo.toml
examples/client/src/: main.rs
src/: client.rs  dto.rs  env.rs  error.rs  extensions.rs  gateway.rs  growthbook.rs  hash.rs  infra.rs  lib.rs  mocker.rs  model.rs  model_private.rs  model_public.rs  nb_gateway.rs  rule_checker.rs
src/condition/: elem_match_comparison.rs  mod.rs  operator_condition.rs  order_comparison.rs  regex_comparison.rs  size_comparison.rs  type_comparison.rs  use_case.rs  version_comparison.rs
src/coverage/: model.rs
src/feature/: condition.rs  feature_rule_experiment.rs  feature_rule_force.rs  feature_rule_parent.rs  feature_rule_rollout.rs  mod.rs  use_case.rs
src/filter/: use_case.rs
src/namespace/: use_case.rs
src/range/: model.rs
tests/: all_cases.json  cache_gateway_call.rs  commons.rs  elem_match_eq_rule_condition_test.rs  experiment_rule_condition_test.rs  feature_result_rule_experiment.rs  get_object_value.rs  get_string_value.rs  growthbook_mocks.rs  gt_rule_condition_test.rs  gte_rule_condition_test.rs  is_off_string_value.rs  is_on_condition_elem_match_eq.rs  is_on_condition_gt.rs  is_on_condition_gte.rs  is_on_condition_lt.rs  is_on_condition_lte.rs  is_on_condition_multiple_strings.rs  is_on_condition_not_elem_match_eq.rs  is_on_condition_regex.rs  is_on_rule_experiment.rs  is_on_rule_force.rs  is_on_rule_rollout.rs  lt_rule_condition_test.rs  lte_rule_condition_test.rs  mocker_test.rs  multiple_rule_condition_test.rs  not_elem_match_eq_rule_condition_test.rs  rollout_rule_condition_by_attribute_test.rs  rollout_rule_condition_test.rs  simple_flag_test.rs  simple_rule_condition_test.rs  update_features_worker.rs
