[package]
name = "growthbook-rust-sdk"
version = "0.2.0"
edition = "2024"
authors = [
    "Deroldo <diogo.fernandes@willbank.com.br",
    "Alefh Sousa <alefh.sousa@gmail.com>",
]
license = "MIT"
description = "unofficial growthbook rust sdk"
readme = "README.md"
homepage = "https://github.com/will-bank/growthbook-rust-sdk"
repository = "https://github.com/will-bank/growthbook-rust-sdk"
keywords = ["growthbook", "experiment", "feature", "flag"]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
hashers = { version = "1.0.1" }

reqwest = { version = "0.12.18", default-features = false, features = [
    "json",
    "rustls-tls",
] }
reqwest-middleware = { version = "0.4.2" }


serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }

reqwest-tracing = { version = "0.5.7", features = ["opentelemetry_0_21"] }
tracing = { version = "0.1.41" }

chrono = { version = "0.4.41" }
regex = { version = "1.11.1" }

[dev-dependencies]
rstest = { version = "0.25.0" }
test-context = { version = "0.4.1" }

wiremock = { version = "0.6.3" }

rand = { version = "0.9.1" }
uuid = { version = "1.17.0", features = ["v7", "serde"] }
